--- a/src/componentes/Item.css
+++ b/src/componentes/Item.css
@@ -19,6 +19,7 @@ display: flex;
     width: 300px;
     height: 300px;
     border-radius: 20%;
+    margin: auto;
 }
 .CardTitle{
     text-align: center;
