--- a/src/componentes/ItenListContainer.css
+++ b/src/componentes/ItenListContainer.css
@@ -1,5 +1,6 @@
-.divItenListContainerAbuelo {
-    display: flex;
-    gap: 50px;
+.divItenListContainer {
+    background-color: black;
+    display: grid;
+   
   
 }
