--- a/src/componentes/ItenListContainer.css
+++ b/src/componentes/ItenListContainer.css
@@ -1,6 +1,5 @@
 .divItenListContainer {
-    background-color: black;
-    display: grid;
-   
+   margin: 20px;
+  background-color: rgb(0, 0, 0);
   
 }
