--- a/src/componentes/ItemDetail.css
+++ b/src/componentes/ItemDetail.css
@@ -1,5 +1,5 @@
 .divContainerDetail{
-    background-color: rgb(242, 240, 240);
+    background-color: rgb(231, 231, 231);
     display: flex;
     
 justify-content: center
@@ -8,13 +8,13 @@ justify-content: center
 
 .DivCard{
     margin: auto;
-    height: 400px;
-    width: 800px;
+    height: max-content;
+    width: max-content;
     display: flex;
     flex-direction: row;
     margin: 100px;
-    background-color: rgb(152, 151, 151);
-    border: 3px solid black;
+    background-color: rgb(242, 242, 242);
+    border: 1px solid rgb(103, 103, 103);
    transition: 1s;
 }
 .Card-Body{
@@ -25,7 +25,7 @@ justify-content: center
 
 .divTextContainer{
     background-color: rgb(238, 236, 233);
-    height: 300px;
+    height: 500px;
     width: 410px;
     margin: auto;
     border: 2px solid black;
@@ -35,8 +35,9 @@ justify-content: center
 }
 .CardTextDetail{
     font-size: 20px;
-    text-align: center;
+   
     font-weight: 700;
+    text-align: justify;
 }
 .divIMGContainer{
    
@@ -56,3 +57,44 @@ justify-content: center
     
 }
 
+.divContainerImgMin{
+    display: flex;
+}
+.imgCardMin{
+    height: 70px;
+    width: 70px;
+}
+
+.divContainerLink{
+    display: flex;
+    height: 20px;
+    flex-direction: column;
+}
+.button{
+    height: 30px;
+    width: 170px;
+    background-color: black;
+    margin: auto;
+    color: azure;
+    font-size: 15px;
+    cursor: pointer;
+    
+    
+   transition: .7s;
+    
+}
+.button:hover{
+    height: 30px;
+    width: 170px;
+    
+    background-color: rgb(0, 0, 0);
+    color: azure;
+    font-size: 15px;
+    cursor: pointer;
+    align-items: center;
+    text-align: center;
+   
+    transition: .7s;
+    box-shadow:4px 7px 15px rgb(76 71 71);
+    
+}
