--- a/src/componentes/Item.css
+++ b/src/componentes/Item.css
@@ -4,26 +4,26 @@ display: flex;
 .Card{
     display: flex;
 
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(230, 228, 228);
     width: 200px;
-    height: 350px;
+    height: 370px;
     margin:auto ;
-   
+   border: 1px solid rgb(175, 175, 175);
     color:rgb(0, 0, 0);
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     padding: 20px;
-border-radius: 10%;
+
     
-    transition: 1s;
+    transition: 0.8s;
 }
 .Card:hover{
     display: flex;
 
     background-color: rgb(236, 236, 236);
     width: 200px;
-    height: 350px;
+    height: 370px;
     margin:auto ;
     border-radius: 10%;
     color:rgb(0, 0, 0);
@@ -32,7 +32,7 @@ border-radius: 10%;
     align-items: center;
     padding: 20px;
     box-shadow:0px 11px 20px rgb(0 0 0);
-    transition: 1s;
+    transition: 0.8s;
 }
 .imgCard{
     width: 170px;
@@ -42,7 +42,7 @@ border-radius: 10%;
 }
 .CardTitle{
     text-align: center;
-    text-decoration: underline;
+   
     font-weight: 600;
     font-size: 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -51,6 +51,7 @@ border-radius: 10%;
     text-align: center;
     font-size: 30px;
     font-weight: 700;
+    
     
     
 }
