--- a/src/componentes/ItemDetail.css
+++ b/src/componentes/ItemDetail.css
@@ -1,5 +1,5 @@
 .divContainerDetail{
-    background-color: rgb(231, 231, 231);
+    background-color: rgb(21, 34, 48);
     display: flex;
     
 justify-content: center
@@ -13,8 +13,8 @@ justify-content: center
     display: flex;
     flex-direction: row;
     margin: 100px;
-    background-color: rgb(242, 242, 242);
-    border: 1px solid rgb(103, 103, 103);
+    background-color: rgb(255, 255, 255);
+   
    transition: 1s;
 }
 .Card-Body{
@@ -25,19 +25,27 @@ justify-content: center
 
 .divTextContainer{
     background-color: rgb(238, 236, 233);
-    height: 500px;
-    width: 410px;
+    height: 530px;
+    width: 610px;
     margin: auto;
-    border: 2px solid black;
+    
     
 
    
 }
-.CardTextDetail{
+.precioText{
+    text-align: center;
     font-size: 20px;
-   
     font-weight: 700;
+}
+.DescriptionText{
     text-align: justify;
+    padding: 10px;
+
+}
+.stockText{
+    text-align: center;
+    font-weight: 700;
 }
 .divIMGContainer{
    
@@ -98,3 +106,17 @@ justify-content: center
     box-shadow:4px 7px 15px rgb(76 71 71);
     
 }
+.btn-fin{
+    height: 30px;
+    width: 200px;
+    background-color: black;
+    color: aliceblue;
+    font-weight: 700;
+    text-decoration: none;
+    text-align: center;
+    transition: 0.8s;
+    cursor: pointer;
+    
+
+}
+
