--- a/src/componentes/css/Cart.css
+++ b/src/componentes/css/Cart.css
@@ -11,9 +11,9 @@
   }
   .cardCarrito{
     max-width: 800px;
-    background-color: white;
+    background-color: rgb(237, 237, 237);
     border-radius: 10px;
-    box-shadow: rgb(71 71 71 / 30%) 0px 0px 40px 1px;
+    box-shadow: rgba(10, 10, 10, 0.3) 0px 0px 40px 1px;
     margin-left: 20px;
     margin-top: 20px;
     margin-bottom: 50px;
@@ -52,7 +52,7 @@
     text-align: center;
   }
   .lineCart{
-    border-top: 0.5px solid rgba(0, 0, 0, 0.185);
+    border-top: 0.5px solid rgba(40, 40, 40, 0.73);
     width: 90%;
     margin-left: 5%;
     padding-top: 15px;
@@ -72,22 +72,22 @@
   }
 
   .btnAddCar{
-    background-color: #947EC3;
+    background-color: #6f6e6f;
     border: black 0.1px solid;
     padding: 5px;
     color: #ffffff;
     font-weight: 500;
-    border-radius: 20px;
+    
     text-decoration: dashed;
     margin-bottom: 15px;
     font-size: 0.8rem;
   }
   
   .btnAddCar:hover{
-    background-color: #c7bce0;
+    background-color: #1c1c1d;
     border: black 0.1px solid;
     padding: 5px;
-    color: #292929;
+    color: #e2e2e2;
     font-weight: 500;
     text-decoration: dashed;
   }
@@ -96,10 +96,20 @@
   }
 
   .btnVaciarCarrito{
-    color: red;
-    background-color: white;
-    border: none;
+    background-color: #e3e3e8;
+    border: black 0.1px solid;
+    padding: 5px;
+    color: #000000;
     font-weight: 500;
+    text-decoration: dashed;
+  }
+  .btnVaciarCarrito:hover{
+    background-color: #d93d3d;
+    border: rgb(230, 8, 8) 0.1px solid;
+    padding: 5px;
+    color: #e2e2e2;
+    font-weight: 500;
+    text-decoration: dashed;
   }
   .noHayCompras{
     display: flex;
