--- a/src/componentes/css/ItenCount.css
+++ b/src/componentes/css/ItenCount.css
@@ -1,7 +1,7 @@
 .divTest{
     background-color: rgba(216, 176, 176, 0.186);
     display: flex;
-    height: 200px;
+    height: 150px;
     width: 370px;
     flex-direction: row;
     justify-content: space-around;
@@ -24,7 +24,7 @@
 .boton{
     height: 20px;
     width: 70px;
-    background-color: black;
+    background-color: #081a1e00;
     color: aliceblue;
     border: 2px solid bisque;
     transition: 0.8s;
@@ -53,5 +53,13 @@
     color: rgb(255, 255, 255);
     border: 2px solid rgb(255, 255, 255);
     border-radius: 20%;
+    transition: 0.8s;
+}
+.botonItemCount{
+    height: 20px;
+    width: 70px;
+    background-color: #081a1ecf;
+    color: aliceblue;
+    border: 2px solid bisque;
     transition: 0.8s;
 }
