--- a/src/App.css
+++ b/src/App.css
@@ -37,4 +37,33 @@
 
 
 
+/* boton de los link NavBar*/
+.btnNavBar{
+  background-color: rgba(65, 125, 184, 0.374);
+  margin: 2px;
+  border: 0px;
+ transition: 0.8s;
 
+
+
+}
+.btnNavBar:hover{
+  background-color: rgb(90, 90, 90);
+  margin: 2px;
+  border: 0px;
+  transition: 0.8s;
+  box-shadow:    1px 6px 24px -2px #0000008f;
+
+
+}
+.carrito{
+  color: #000000;
+  
+}
+.carrito:hover{
+  color: #000000;
+  
+}
+.NavbarDIV{
+  display: flex;
+}
