--- a/src/componentes/css/Item.css
+++ b/src/componentes/css/Item.css
@@ -1,89 +1,46 @@
-.divContainerCard{
-display: flex;
+.card{
+  background-color: rgb(23, 23, 23);
+  transition: 1s ;
 }
-.Card{
-    display: flex;
 
-    background-color: rgb(230, 228, 228);
-    width: 200px;
-    height: 370px;
-    margin:auto ;
-   border: 1px solid rgb(175, 175, 175);
-    color:rgb(0, 0, 0);
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 20px;
 
-    
-    transition: 0.8s;
-}
-.Card:hover{
-    display: flex;
-
-    background-color: rgb(236, 236, 236);
-    width: 200px;
-    height: 370px;
-    margin:auto ;
-    border-radius: 10%;
-    color:rgb(0, 0, 0);
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 20px;
-    box-shadow:0px 11px 20px rgb(0 0 0);
-    transition: 0.8s;
-}
-.imgCard{
-    width: 170px;
-    height:170px;
-    
-    margin: auto;
-}
-.CardTitle{
-    text-align: center;
-   
-    font-weight: 600;
-    font-size: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-.CardText{
-    text-align: center;
-    font-size: 30px;
-    font-weight: 700;
-    
-    
-    
-}
-.button{
-    height: 30px;
-    width: 170px;
-    background-color: black;
-    margin: auto;
-    color: azure;
-    font-size: 15px;
+.card:hover {
+  background-color: rgb(23, 23, 23);
+    box-shadow: 0px 5px 20px 0px rgb(86, 86, 86) ;
+    transition: 0.8 ;
+  }
+  
+  .card-body {
+    padding: 2rem 0 !important;
+  }
+  
+  .card-text {
+    padding: 0.3rem 1rem;
+    font-size: 1rem;
+  }
+  
+  .overflow {
+    overflow:hidden;
+  }
+  
+  .card-img-top {
+    transform: scale(1);
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .card-img-top:hover {
+    transform: scale(1.2);
+  }
+  .button{
+    background-color:lightslategray;
+    border: 1px solid black;
     cursor: pointer;
-    
-    
-   transition: .7s;
-    
-}
-.button:hover{
-    height: 30px;
-    width: 200px;
-    
-    background-color: rgb(0, 0, 0);
-    color: azure;
-    font-size: 15px;
+    box-shadow:4px 7px 15px rgb(41, 41, 41);
+  }
+  .button:hover{
+    background-color:rgb(99, 107, 117);
+    border: 1px solid black;
     cursor: pointer;
-    align-items: center;
-    text-align: center;
-   
-    transition: .7s;
-    box-shadow:4px 7px 15px rgb(76 71 71);
-    
-}
-.divContenedorBoton{
-   
-    text-align: center;
-}
+    box-shadow:4px 7px 15px rgb(41, 41, 41);
+    transition: 0.8s;
+  }
