--- a/src/componentes/css/ItemList.css
+++ b/src/componentes/css/ItemList.css
@@ -1,10 +1,11 @@
 .ItemListC{
     display: grid;
-    gap: 1rem;
-    grid-auto-rows: 29rem;
-    grid-template-columns: repeat(auto-fill, minmax(18rem ,1fr) );
-    background-image: linear-gradient(to top, #EDE9E7 0%, #EDE9E7 100%);
+    padding: 60px;
    
-    
+  
+    gap: 5rem;
+    grid-auto-rows: 24rem;
+    grid-template-columns: repeat(auto-fill, minmax(16rem ,1fr) );
+    background-image: linear-gradient(to top, #EDE9E7 0%, #EDE9E7 100%);
    
 }
