--- a/src/componentes/css/ItenCount.css
+++ b/src/componentes/css/ItenCount.css
@@ -6,60 +6,42 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    border-radius: 15%;
     
   
 
     
 }
-.DivContainer{
-    text-align: center;
+.divContador{
     display: flex;
-    align-items: center;
+    
+}
+.scr{
+    margin: 10px;
+    align-items: baseline;
+    
+    
+}
+.scrh2{
+    font-weight: 600;
+}
 
-    gap: 20px;
-    
-    flex-direction: column
-    
-}
-.boton{
-    height: 20px;
-    width: 70px;
-    background-color: #081a1e00;
-    color: aliceblue;
-    border: 2px solid bisque;
-    transition: 0.8s;
-}
-.boton:hover{
-    height: 20px;
-    width: 70px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    border: 2px solid rgb(0, 0, 0);
-    transition: 0.8s;
-}
+
 .botonAgregarCarrito{
-    height: 30px;
+    height: 60px;
     width: 150px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+    background-color: rgb(23, 23, 23);
+    color: rgb(197, 197, 197);
     border: 2px solid rgb(0, 0, 0);
     transition: 1s;
     border-radius: 20%;
 }
 .botonAgregarCarrito:hover{
-    height: 30px;
+    height: 60px;
     width: 150px;
     background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+    color: rgb(197, 197, 197);
     border: 2px solid rgb(255, 255, 255);
     border-radius: 20%;
-    transition: 0.8s;
-}
-.botonItemCount{
-    height: 20px;
-    width: 70px;
-    background-color: #081a1ecf;
-    color: aliceblue;
-    border: 2px solid bisque;
     transition: 0.8s;
 }
