--- a/src/App.css
+++ b/src/App.css
@@ -42,20 +42,22 @@
   justify-content: space-evenly
 }
 .btnNavBar{
-  background-color: rgba(65, 125, 184, 0.374);
-  margin: 2px;
+  background-color: rgba(255, 255, 255, 0.888);
+  margin: 5px;
   border: 0px;
  transition: 0.8s;
+ border-radius: 20%;
 
 
 
 }
 .btnNavBar:hover{
   background-color: rgb(90, 90, 90);
-  margin: 2px;
+  margin: 5px;
   border: 0px;
   transition: 0.8s;
   box-shadow:    1px 6px 24px -2px #0000008f;
+  border-radius: 20%;
 
 
 }
