--- a/src/App.css
+++ b/src/App.css
@@ -42,33 +42,49 @@
   justify-content: space-evenly
 }
 .btnNavBar{
-  background-color: rgba(255, 255, 255, 0.888);
+  
+ 
+  color: aliceblue;
   margin: 5px;
-  border: 0px;
+  
  transition: 0.8s;
- border-radius: 20%;
+ 
 
 
 
 }
-.btnNavBar:hover{
-  background-color: rgb(90, 90, 90);
-  margin: 5px;
-  border: 0px;
-  transition: 0.8s;
-  box-shadow:    1px 6px 24px -2px #0000008f;
-  border-radius: 20%;
 
-
-}
 .carrito{
-  color: #000000;
+  color: #eeeeee;
   
 }
 .carrito:hover{
-  color: #000000;
+  color: #eeeeee;
   
 }
 .NavbarDIV{
   display: flex;
+  gap: 15px;
+  
+}
+.LinkBTN{
+  text-decoration: none;
+  color: #eeeeee;
+  border: 1px solid rgb(114, 114, 114);
+  padding: 4px;
+  transition: 1s;
+
+}
+.LinkBTN:hover{
+  text-decoration: none;
+  color: #eeeeee;
+  border: 1px solid rgb(114, 114, 114);
+  padding: 4px;
+ 
+  
+}
+.IconEcommerce{
+  color: #eeeeee;
+  height: 30px;
+  width: 30px;
 }
