--- a/src/componentes/css/Item.css
+++ b/src/componentes/css/Item.css
@@ -1,6 +1,7 @@
-.card{
-  background-color: rgb(23, 23, 23);
+ .card{
+  background-color: rgb(185, 182, 182);
   transition: 1s ;
+  border-bottom: 1px solid black;
 }
 
 
@@ -32,15 +33,33 @@
     transform: scale(1.2);
   }
   .button{
-    background-color:lightslategray;
-    border: 1px solid black;
+   
+  background-color: rgba(82, 180, 178, 0.888);
+  border: none;
     cursor: pointer;
     box-shadow:4px 7px 15px rgb(41, 41, 41);
   }
+  
   .button:hover{
-    background-color:rgb(99, 107, 117);
-    border: 1px solid black;
+    background-color: rgba(82, 180, 178, 0.888);
+  border: none;
     cursor: pointer;
     box-shadow:4px 7px 15px rgb(41, 41, 41);
-    transition: 0.8s;
   }
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
