--- a/src/componentes/css/ItenListContainer.css
+++ b/src/componentes/css/ItenListContainer.css
@@ -7,10 +7,10 @@
 
   text-align: center;
 
-  background-image: linear-gradient(to top, #313234 0%, #2a2727 100%);
+  background-image: linear-gradient(to top, #333333 0%,  #131019 100%);
 }
 .TituloPortada{
   padding: 30px;
   font-size: 40px;
-  color: antiquewhite;
+  color: rgb(248, 248, 248);
 }
